# loasim

./: .gitignore  README.md  calculate.py  config.yaml  pyproject.toml  test.py  test2.py  test3.py
.github/workflows/: main.yml
e2e/: test_artist_simple_setting.py  test_blade_simple_setting.py  test_blade_simple_setting2.py  test_destroyer_simple_setting.py  test_hawkeye_simple_setting.py  test_scouter_simple_setting.py
e2e/__snapshots__/: test_artist_simple_setting.ambr  test_blade_simple_setting.ambr  test_blade_simple_setting2.ambr  test_destroyer_simple_setting.ambr  test_hawkeye_simple_setting.ambr  test_scouter_simple_setting.ambr
e2e/configs/: artist_character.yml  artist_dealcycle.yml  blade2_character.yml  blade2_dealcycle.yml  blade_character.yml  blade_dealcycle.yml  destroyer_character.yml  destroyer_dealcycle.yml  hawkeye_character.yml  hawkeye_dealcycle.yml  scouter_character.yml  scouter_dealcycle.yml
loasim/: Card.py  CharacterModifier.py  Enemy.py  Engraving.py  SetItem.py  Skill.py  calculate.py  scouter.py  stat.py  util.py
loasim/accessory/: __init__.py  base.py  builtin.py  data.yml
loasim/avatar/: __init__.py  base.py  builtin.py
loasim/card/: __init__.py  base.py  builtin.py  repository.py
loasim/character/: __init__.py  base.py
loasim/core/: __init__.py  buff.py  enemy.py  skill.py  stat.py
loasim/engraving/: __init__.py  base.py  builtin.py
loasim/gear/: __init__.py  base.py  builtin.py  data.yml
loasim/job/: __init__.py  artist.py  base.py  blade.py  destroyer.py  hawkeye.py  scouter.py
loasim/setitem/: __init__.py  base.py  builtin.py
scripts/: run.py
tests/: conftest.py  test_calculate.py  test_setitem.py
tests/accessory/: test_accessory.py
tests/avatar/: test_avatar.py
tests/card/: test_card.py
tests/core/: conftest.py  test_buff.py  test_enemy.py  (+2 more)
(+12 files in other folders)
